[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Powerups/My project-1-7.png" type="Texture" id=1]
[ext_resource path="res://Powerup1.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0907

[node name="Powerup1" type="Area2D"]
position = Vector2( 160, 193 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -11 )
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
visible = false

[node name="QuickFire" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="." to="." method="_on_Powerup1_area_entered"]
[connection signal="timeout" from="QuickFire" to="." method="_on_QuickFire_timeout"]
